# location-manager

./: Makefile.am  autogen.sh  configure.ac
include/: LocationManager-errors.h  LocationManager-version.h.in  LocationManager.h  header-generator.xsl
introspection/: all.xml  org.freedesktop.LocationManager1.Provider.xml  org.freedesktop.LocationManager1.xml
liblm-glib/: liblm-glib.h  lm-errors.c.template  lm-errors.h.template
src/: lm-log.c  lm-log.h  main.c
